# llvm-covmap

./: CMakeLists.txt  README.md
docs/: Implementation.md  README.md
include/llvm-covmap/Support/: SharedMemory.h
scripts/: SetupLinks.sh
src/: CMakeLists.txt
src/Compiler/: CMakeLists.txt  Configure.h.in  LLVMCovmapClang.cpp  LLVMCovmapLLD.cpp  Utils.hpp
src/Pass/: CMakeLists.txt  LLVMCoverageMapPass.cpp
src/Runtime/: CMakeLists.txt  LLVMCoverageMap.c  LLVMCoverageMap.cpp
src/Shell/: CMakeLists.txt  LLVMCoverageMapShell.cpp
src/Support/: CMakeLists.txt  SharedMemory.cpp
src/Watcher/: CMakeLists.txt  LLVMCovmapWatcher.cpp
